<resources>
    <string name="app_name">HWYP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="error_while_logging_in">error while logging in</string>
    <string name="login_button">LOGIN</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
</resources>