<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_background">

<!--    <ImageView-->
<!--        android:id="@+id/logoImageView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:src="@drawable/logo"-->
<!--        android:contentDescription="@string/todo" />-->


    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="150dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/loginFormLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTextView"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:paddingHorizontal="40dp">



         <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:padding="10dp"

            android:autofillHints="" />

         <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:autofillHints="" />


         <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_background"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="10dp"

            android:autofillHints="" />

<!--        <EditText-->
<!--            android:id="@+id/repassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:background="@drawable/edittext_background"-->
<!--            android:hint="Re-enter Password"-->
<!--            android:inputType="textPassword"-->
<!--            android:padding="10dp"-->

<!--            android:autofillHints="" />-->

        <!-- Email EditText -->
        <TextView
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:visibility="gone"
            android:id="@+id/error"
            android:text="@string/error_while_logging_in"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:text="Sign Up"
            android:textColor="@color/white" />

        <!-- Progress bar for loading -->
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />

        <!-- Forget Password -->
        <TextView
            android:id="@+id/forgetPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="222dp"
        android:layout_height="24dp"
        android:layout_below="@+id/loginFormLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="62dp"
        android:fontFamily="sans-serif-medium"
        android:text="Already have an Account?  SIGN IN"
        android:textColor="@color/black"
        android:textStyle="bold" />

</RelativeLayout>
